--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,12 @@
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/zeebe
+  r2dbc:
+    url: r2dbc:mysql://localhost:3306/zeebe
     username: root
     password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
+  data:
+    r2dbc:
+      repositories:
+        enabled: true
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
